# wgpu_tidy

./: .gitignore  Cargo.toml
.cargo/: config.toml
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: lib.rs  main.rs  reflection.rs  shader.rs
src/shader/: gorilla.slang
