[package]
name = "wgpu_tidy"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = {version="24", features=["spirv"]}
encase = "0.10"
winit = "0.30"
pollster = "0"
ouroboros = "0"
cgmath = "0"
syn = "2"
bytemuck = "1"
image = "0"
slang = { git = "https://github.com/FloatyMonkey/slang-rs.git" }
proc_macros = {path = "proc_macros"}